finished leaves page

--- a/fa-leaves.html
+++ b/fa-leaves.html
@@ -50,9 +50,20 @@
         </p>
     </div>
 
+    <div class="leaves-gallery-grid">
+        <div class="leaves-gallery">
+            <img src="images/fine-art-project-images/leaves/Leaf2.png" class="fullwidth-image css-column-grid" id="leaf2" alt="Abstract Leaf Print">
+            <img src="images/fine-art-project-images/leaves/Leaf5.png" class="fullwidth-image css-column-grid" id="leaf4" alt="Abstract Leaf Print">
+            <img src="images/fine-art-project-images/leaves/Leaf10.png" class="fullwidth-image css-column-grid" id="leaf4" alt="Abstract Leaf Print">
+            <img src="images/fine-art-project-images/leaves/Leaf4.png" class="fullwidth-image css-column-grid" id="leaf4" alt="Abstract Leaf Print">
+            <img src="images/fine-art-project-images/leaves/Leaf3.png" class="fullwidth-image css-column-grid" id="leaf4" alt="Abstract Leaf Print">
+            <img src="images/fine-art-project-images/leaves/Leaf8.png" class="fullwidth-image css-column-grid" id="leaf4" alt="Abstract Leaf Print">
+        </div>
+    </div>
+
     <div class="proj-bottom-nav">
         <div class="bottom-nav-arrows">
-            <a href="#">
+            <a href="fa-portraits.html">
                 <svg id="left-arrow" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 200"><title>Artboard 1 copy 3</title><path d="M80,24.64l6.34,6.68L17.77,97.81H200V107H17.77l68.6,66.49L80,180.13,0,102.38Z"/></svg>                </a>
             <a href="fine-art.html" class="bottom-nav-text">Back to Fine Art Page</a>
             <a href="#">
