--- a/fa-portraits.html
+++ b/fa-portraits.html
@@ -53,11 +53,13 @@
         </p>
     </div>
 
-    <div class="portrait-gallery container">
-        <img src="images/fine-art-project-images/portraits/Will_web.png" class="fullwidth-image" id="Will" alt="Will Portrait">
-        <img src="images/fine-art-project-images/portraits/celina006_web.png" class="fullwidth-image" id="Celina" alt="Celina Portrait">
-        <img src="images/fine-art-project-images/portraits/Man_web.png" class="fullwidth-image" id="Man" alt="Man Portrait">
-    </div>
+    <div class="portraits-gallery-grid">
+        <div class="portraits-gallery">
+            <img src="images/fine-art-project-images/portraits/Man_web.png" class="fullwidth-image css-column-grid" id="Man" alt="Man Portrait">
+            <img src="images/fine-art-project-images/portraits/celina006_web.png" class="fullwidth-image css-column-grid" id="Celina" alt="Celina Portrait">
+            <img src="images/fine-art-project-images/portraits/Will_web.png" class="fullwidth-image css-column-grid" id="Will" alt="Will Portrait">
+        </div>
+    </div>  
 
     <div class="proj-bottom-nav">
         <div class="bottom-nav-arrows">
