book of names page and updated fine art page

--- a/d-commemorating.html
+++ b/d-commemorating.html
@@ -53,7 +53,7 @@
         <img src="images/design-project-images/commem/GalleryCatalog5.png" class="fullwidth-image" alt="Gallery Catalog Spread">
     </div>
 
-    <div class="commem-intro top-margin">
+    <div class="commem-intro top-margin bottom-margin">
         <p class="commem-intro-p">To celebrate the 20th anniversary of the gallery, the 30th year of the Institute for the Humanities, and the 200th birthday of the University of Michigan, the institute asked me to design a gallery catalog and a set of commemorative cards.</p>
     </div>
 
@@ -63,7 +63,7 @@
         <img src="images/design-project-images/commem/GalleryCatalog3.png" class="fullwidth-image" id="GalleryCatalog3" alt="Gallery Catalog Spread">
     </div>
 
-    <div class="commem-catalog top-margin">
+    <div class="commem-catalog top-margin bottom-margin">
         <p class="commem-catalog-p">The 44-page catalog that I subsequently designed is an important documentation of the development of the gallery and artist residency program at the institute, and an attestation to the challenging, diverse, and humanistic programming that the institute strives to promote. The design is rhythmic and uncluttered, setting a reliable tone and allowing the work to speak for itself. The thick matte cover is not fussy, textural, and inviting, while the inner gloss pages make the images of the work luminous and rich.</p>
     </div>
 
@@ -72,7 +72,7 @@
         <img src="images/design-project-images/commem/GalleryCatalog7.png" class="fullwidth-image" id="GalleryCatalog7" alt="Gallery Catalog Spread">
     </div>
 
-    <div class="commem-cards top-margin">
+    <div class="commem-cards top-margin bottom-margin">
         <p class="commem-cards-p">I designed this thirty-card box set to highlight a notable event from each year of the institute’s programming. The box’s design is elegant and utilitarian in nature; it unfolds by a tab system, and can be used as both a keepsake and a mailer. The use of Baskerville for type and minimal color creates a clean and classic design for both the box and the postcards, thereby emphasizing the image chosen to commemorate each year.</p>
     </div>
 
@@ -88,7 +88,7 @@
         <img src="images/design-project-images/commem/Postcard5.png" class="fullwidth-image" id="Postcard5" alt="Bicentennial Notecards">
     </div>
 
-    <div class="proj-bottom-nav-design">
+    <div class="proj-bottom-nav">
         <div class="bottom-nav-arrows">
             <a href="d-hivisid.html">
                 <svg id="left-arrow" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 200"><title>Artboard 1 copy 3</title><path d="M80,24.64l6.34,6.68L17.77,97.81H200V107H17.77l68.6,66.49L80,180.13,0,102.38Z"/></svg>                </a>
