--- a/fa-portraits.html
+++ b/fa-portraits.html
@@ -44,12 +44,12 @@
         <img src="images/fine-art-project-images/portraits/Allie_web.png" class="fullwidth-image" alt="Allie Portrait">
     </div>
 
-    <div class="portraits-intro top-margin">
+    <div class="portraits-intro top-margin bottom-margin">
         <p class="portraits-intro-p">
-            This series of portraits are all woodblock prints, with the exception of Man, which was carved from a linoleum block and then printed onto a woodblock background. 
+            This series of portraits are all woodblock prints, with the exception of <i>Man</i>, which was carved from a linoleum block and then printed onto a woodblock background. 
             <br>
             <br>
-            After drawing the images onto a woodblock, I carved Allie, Will, and Celina by hand using an engraving knife to lightly etch lines into the surface, going with the grain. This series explores notions of identity, memory, and impermanence, through the physical process of immortalizing these quiet moments in wood and ink.
+            After drawing the images onto a woodblock, I carved <i>Allie, Will, Grandpa</i>, and <i>Celina</i> by hand using an engraving knife to lightly etch lines into the surface, going with the grain. This series explores notions of identity, memory, and impermanence, through the physical process of immortalizing these quiet moments in wood and ink.
         </p>
     </div>
 
@@ -58,12 +58,13 @@
             <img src="images/fine-art-project-images/portraits/Man_web.png" class="fullwidth-image css-column-grid" id="Man" alt="Man Portrait">
             <img src="images/fine-art-project-images/portraits/celina006_web.png" class="fullwidth-image css-column-grid" id="Celina" alt="Celina Portrait">
             <img src="images/fine-art-project-images/portraits/Will_web.png" class="fullwidth-image css-column-grid" id="Will" alt="Will Portrait">
+            <img src="images/fine-art-project-images/portraits/Grandpa.png" class="fullwidth-image css-column-grid" id="Grandpa" alt="Grandpa Portrait">
         </div>
     </div>  
 
     <div class="proj-bottom-nav">
         <div class="bottom-nav-arrows">
-            <a href="#">
+            <a href="fa-bookofnames.html">
                 <svg id="left-arrow" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 200"><title>Artboard 1 copy 3</title><path d="M80,24.64l6.34,6.68L17.77,97.81H200V107H17.77l68.6,66.49L80,180.13,0,102.38Z"/></svg>                </a>
             <a href="fine-art.html" class="bottom-nav-text">Back to Fine Art Page</a>
             <a href="fa-leaves.html">
