--- a/fa-bookofnames.html
+++ b/fa-bookofnames.html
@@ -1,9 +1,9 @@
-<!DOCTYPE <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Leaf Abstractions</title>
+    <title>Book of Names</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="portfolio.css">
     <link rel="stylesheet" type="text/css" media="screen" href="fonts.css">
@@ -29,44 +29,47 @@
     </nav>
 
     <header class="proj-header container">
-        <div class="leaves-header-group">
+        <div class="book-header-group">
             <div class="number-type">
-                <h3 class="proj-number">02.</h3>
+                <h3 class="proj-number">03.</h3>
                 <div class="proj-heading-line"></div>
                 <h4 class="proj-heading-type">Fine Art</h4>
             </div>
-            <h1 class="proj-header-title"><span class="proj-header-italic">Leaf</span> Abstractions</h1>
-            <p class="proj-header-subtitle">An exploration into form and abstraction through wood and ink.</p>
+            <h1 class="proj-header-title">Book <span class="proj-header-italic">of</span> Names</h1>
+            <p class="proj-header-subtitle">A collection of stories relating to identity.</p>
         </div>
     </header>
 
-    <div class="leaves-top-image-background top-image-margin-top">
-        <img src="images/fine-art-project-images/leaves/Leaf1.png" class="fullwidth-image" alt="Leaf1">
+    <div class="book-top-image-background top-image-margin-top">
+        <img src="images/fine-art-project-images/book/BookofNames22.png" class="fullwidth-image" alt="Book of Names Image">
     </div>
 
-    <div class="leaves-intro top-margin bottom-margin">
-        <p class="leaves-intro-p">
-            In this series of prints, I explored the image of a leaf, and how I could take well-known object and abstract its form. Repetition and color were two methods of experimentation I implemented in particular. I desired to explore how we see things, and how something mundane or everyday could be transformed into something unusual. All of these prints are woodblock, with the first two printed on Hosho, and the rest on Okawara paper.
+    <div class="book-intro top-margin bottom-margin">
+        <p class="book-intro-p">
+            My interest in identity, portraiture, and medium most recently culminated in the production of a book, titled <i>The Book of Names</i>. Five people are the focus of this book; I interviewed these people and gathered their stories on how they got their names, and subsequently designed a series of one spread stories, coupled with a woodblock print portrait that I did of them. The portraits were done by the same process as the woodblock prints in “Portraits in Wood and Ink,” where an engraving knife was used to lightly etch lines into the surface of a woodblock, going with the grain.
+            <br>
+            <br>
+            8.5x6.5 inches, on Reeves BFK and Gampi paper.
         </p>
     </div>
 
-    <div class="leaves-gallery-grid">
-        <div class="leaves-gallery">
-            <img src="images/fine-art-project-images/leaves/Leaf2.png" class="fullwidth-image css-column-grid" id="leaf2" alt="Abstract Leaf Print">
-            <img src="images/fine-art-project-images/leaves/Leaf5.png" class="fullwidth-image css-column-grid" id="leaf4" alt="Abstract Leaf Print">
-            <img src="images/fine-art-project-images/leaves/Leaf10.png" class="fullwidth-image css-column-grid" id="leaf4" alt="Abstract Leaf Print">
-            <img src="images/fine-art-project-images/leaves/Leaf4.png" class="fullwidth-image css-column-grid" id="leaf4" alt="Abstract Leaf Print">
-            <img src="images/fine-art-project-images/leaves/Leaf3.png" class="fullwidth-image css-column-grid" id="leaf4" alt="Abstract Leaf Print">
-            <img src="images/fine-art-project-images/leaves/Leaf8.png" class="fullwidth-image css-column-grid" id="leaf4" alt="Abstract Leaf Print">
-        </div>
+    <div class="book-gallery">
+        <img src="images/fine-art-project-images/book/BARRACO_NINA_BOOK2.png" class="fullwidth-image" id="bookimg1" alt="Book of Names Sketches and Assembly">
+        <img src="images/fine-art-project-images/book/BookofNames5.png" class="fullwidth-image" id="bookimg2" alt="Book of Names Image">
+    </div>
+
+    <div class="book-closing top-margin bottom-margin">
+        <p class="book-closing-p">
+            Each story was a poignant and personal attestation to the experiences that shape people’s identities, even if they were not necessarily the product of his or her own choices. These accounts represented a varied and diverse group of people, yet each story came together to form a shared experience of finding meaning and relevance within oneself.
+        </p>
     </div>
 
     <div class="proj-bottom-nav">
         <div class="bottom-nav-arrows">
-            <a href="fa-portraits.html">
+            <a href="fa-leaves.html">
                 <svg id="left-arrow" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 200"><title>Artboard 1 copy 3</title><path d="M80,24.64l6.34,6.68L17.77,97.81H200V107H17.77l68.6,66.49L80,180.13,0,102.38Z"/></svg>                </a>
             <a href="fine-art.html" class="bottom-nav-text">Back to Fine Art Page</a>
-            <a href="fa-bookofnames.html">
+            <a href="fa-portraits.html">
                 <svg id="right-arrow" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 200"><title>Artboard 1</title><path d="M200,101.59l-80,77.75-6.34-6.68,68.6-66.5H0V97H182.23l-68.6-66.49L120,23.85Z"/></svg>
             </a>
         </div>
