updated hivisid page

--- a/d-hivisid.html
+++ b/d-hivisid.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="portfolio.css">
     <link rel="stylesheet" type="text/css" media="screen" href="fonts.css">
-    <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
     <link rel="stylesheet" href="https://use.typekit.net/prz2neu.css">
 </head>
 <body>
@@ -81,44 +80,10 @@
                 <div id="hivisid-type-p">
                     <p class="proj-body-copy">Timeless Garamond juxtaposes with contemporary, direct Oswald.</p>
                 </div>
-            </div>
-        </div>
-
-        <div class="hivisid-typestudies">
-            <div class="oswald">
-                <h2 class="oswald-subtitle">Oswald</h2>
-                <p class="oswald-alphabet">
-                    ABCDEFGHIJKLMNOPQRSTUVWXYZ<br>
-                    abcdefghijklmnopqrstuvwxyz<br>
-                    1234567890
-                </p>
-            </div>
-            <div class="garamond">
-                <h2 class="garamond-subtitle">Adobe Garamond Pro</h2>
-                <p class="garamond-alphabet">
-                    ABCDEFGHIJKLMNOPQRSTUVWXYZ<br>
-                    abcdefghijklmnopqrstuvwxyz<br>
-                    1234567890
-                </p>
-            </div>
-            <div class="hivisid-typeexamples">
-                <div class="hivisid-typecaptions">
-                    <p class="oswald-caption">
-                        <b>Oswald</b><br>
-                        For use in headlines
-                    </p>
-                    <p class="garamond-caption">
-                        <b>Adobe Garamond Pro</b><br>
-                        For subtitles & body copy
-                    </p>
-                </div>
-                <div class="hivisid-typeusecases">
-                    <h2 class="hivisid-header-ex">Generating Scholarly Discourse</h2>
-                    <h3 class="hivisid-subtitle-ex">furthering humanistic inquiry on campus</h3>
-                    <p class="hivisid-p-ex">
-                        The Institute for the Humanities is a center for innovative, collaborative study in the humanities and arts. Each year we provide fellowships for Michigan faculty, graduate students, and visiting scholars who work on interdisciplinary projects. We also offer a wide array of public and scholarly events, including public lectures, conferences, art exhibitions, and performances.
-                    </p>
-                </div>
+                <img src="images/design-project-images/hi-vis-id/Letter-Studies-Oswald.png" class="fullwidth-image" id="letter-study-oswald" alt="Letter Study Oswald">
+                <img src="images/design-project-images/hi-vis-id/Letter-Studies-Garamond.png" class="fullwidth-image" id="letter-study-garamond" alt="Letter Study Garamond">
+                <img src="images/design-project-images/hi-vis-id/Type_Studies_Examples.png" class="fullwidth-image" id="type-study-examples" alt="Type Study Examples">
+                <img src="images/design-project-images/hi-vis-id/Type_Studies_Examples_cropped.png" class="fullwidth-image" id="type-study-examples-cropped" alt="Type Study Examples Cropped">
             </div>
         </div>
 
@@ -130,6 +95,7 @@
                 </div>
             </div>
         </div>
+        <img src="images/design-project-images/hi-vis-id/Annual_Report_7_wall.png" class="fullwidth-image" alt="Annual Report Spread">
 
         <div class="hivisid-colorstudies">
             <div class="squares">
