--- a/design.html
+++ b/design.html
@@ -29,65 +29,59 @@
     </nav>
 
 
-    <main class="project-main container">
-
+    <div class="project-heading-group">
         <div class="project-main-heading">
             <div class="heading-line" id="project-line"></div>
             <h1 class="project-title">design</h1>
             <p class="subtitle" id="project-main-subtitle">UX, branding, and print design. And a little development for good measure.</p>
         </div>
+    </div>
 
-
-        <div class="project-gallery">
-
-            <div class="project">
-                <a href="d-greatblueorange.html">
-                    <img src="images/design/sketch3-background-cropped.png" class="project-image" alt="project one thumbnail">
-                </a>
-                <div class="project-info">
-                    <div class="number-group">
-                        <div class="number-line"></div>
-                        <h3 class="number">01.</h3>
-                    </div>
-                    <div class="project-text">
-                        <a href="d-greatblueorange.html" class="project-name">Great Blue Orange</a>
-                        <p class="project-subtitle">UX/UI & development</p>
-                    </div>
-                </div>
+    <div class="project">
+        <a href="d-greatblueorange.html" class="project-img-link">
+            <img src="images/design/sketch3-background-cropped.png" class="fullwidth-image" alt="Project One Thumbnail">
+        </a>
+        <div class="project-info">
+            <div class="number-group">
+                <div class="number-line"></div>
+                <h3 class="number">01.</h3>
             </div>
-            <div class="project">
-                <a href="d-hivisid.html">
-                    <img src="images/design/Annual_Report_2_cropped.png" class="project-image" alt="project two thumbnail">
-                </a>
-                <div class="project-info">
-                    <div class="number-group">
-                        <div class="number-line"></div>
-                        <h3 class="number">02.</h3>
-                    </div>
-                    <div class="project-text">
-                        <a href="d-hivisid.html" class="project-name">HI Visual Identity System</a>
-                        <p class="project-subtitle">brand & print design</p>
-                    </div>
-                </div>
+            <div class="project-text">
+                <a href="d-greatblueorange.html" class="project-name">Great Blue Orange</a>
+                <p class="project-subtitle">UX/UI & development</p>
             </div>
-            <div class="project">
-                <a href="d-commemorating.html">
-                    <img src="images/design/postcard4-cropped.png" class="project-image" alt="project three thumbnail">
-                </a>
-                <div class="project-info">
-                    <div class="number-group">
-                        <div class="number-line"></div>
-                        <h3 class="number">03.</h3>
-                    </div>
-                    <div class="project-text">
-                        <a href="d-commemorating.html" class="project-name">Commemorating the Humanities</a>
-                        <p class="project-subtitle">print & packaging design</p>
-                    </div>
-                </div>
-            </div>
-
         </div>
-    </main>
+    </div>
+    <div class="project">
+        <a href="d-hivisid.html" class="project-img-link top-margin">
+            <img src="images/design/Annual_Report_2_cropped.png" class="fullwidth-image" alt="Project Two Thumbnail">
+        </a>
+        <div class="project-info">
+            <div class="number-group">
+                <div class="number-line"></div>
+                <h3 class="number">02.</h3>
+            </div>
+            <div class="project-text">
+                <a href="d-hivisid.html" class="project-name">HI Visual Identity System</a>
+                <p class="project-subtitle">brand & print design</p>
+            </div>
+        </div>
+    </div>
+    <div class="project">
+        <a href="d-commemorating.html" class="project-img-link top-margin">
+            <img src="images/design/postcard4-cropped.png" class="fullwidth-image" alt="Project Three Thumbnail">
+        </a>
+        <div class="project-info">
+            <div class="number-group">
+                <div class="number-line"></div>
+                <h3 class="number">03.</h3>
+            </div>
+            <div class="project-text">
+                <a href="d-commemorating.html" class="project-name">Commemorating the Humanities</a>
+                <p class="project-subtitle">print & packaging design</p>
+            </div>
+        </div>
+    </div>
 
 
     <footer>
