--- a/fine-art.html
+++ b/fine-art.html
@@ -38,7 +38,7 @@
         </div>
     
         <div class="project">
-            <a href="fa-portraits.html" class="project-img-link top-margin">
+            <a href="fa-portraits.html" class="project-img-link">
                 <img src="images/fine-art/Allie_web.png" class="fullwidth-image" alt="Project One Thumbnail">
             </a>
             <div class="project-info">
