--- a/d-hivisid.html
+++ b/d-hivisid.html
@@ -63,76 +63,75 @@
         </div>
     </header>
 
-        <div class="hivisid-top-image-background top-image-margin-top">
-            <img src="images/design-project-images/hi-vis-id/Annual_Report_3.png" class="fullwidth-image" alt="Annual Report Spread">
-        </div>
+    <div class="hivisid-top-image-background top-image-margin-top">
+        <img src="images/design-project-images/hi-vis-id/Annual_Report_3.png" class="fullwidth-image" alt="Annual Report Spread">
+    </div>
 
-        <div class="hivisid-challenge">
-            <h2 class="proj-subtitle" id="hivisid-challenge-subtitle">The Challenge</h2>
-            <div id="hivisid-challenge-p">
-                <p class="proj-body-copy">The Institute for the Humanities at the University of Michigan was struggling with presenting their programming in a cohesive way, and developing their name recognition around campus. In order to combat this problem, I developed a visual identity system that could be used on all primary institute publicity materials.</p>
+    <div class="hivisid-challenge top-margin bottom-margin">
+        <h2 class="proj-subtitle" id="hivisid-challenge-subtitle">The Challenge</h2>
+        <div id="hivisid-challenge-p">
+            <p class="proj-body-copy">The Institute for the Humanities at the University of Michigan was struggling with presenting their programming in a cohesive way, and developing their name recognition around campus. In order to combat this problem, I developed a visual identity system that could be used on all primary institute publicity materials.</p>
+        </div>
+    </div>
+
+    <div class="grey-background">
+        <div class="hivisid-type">
+            <h2 class="proj-subtitle" id="hivisid-type-subtitle"><span class="roman-numeral">I.</span> Type</h2>
+            <div id="hivisid-type-p">
+                <p class="proj-body-copy">Timeless Garamond juxtaposes with contemporary, direct Oswald.</p>
+            </div>
+            <img src="images/design-project-images/hi-vis-id/Letter-Studies-Oswald.png" class="fullwidth-image" id="letter-study-oswald" alt="Letter Study Oswald">
+            <img src="images/design-project-images/hi-vis-id/Letter-Studies-Garamond.png" class="fullwidth-image" id="letter-study-garamond" alt="Letter Study Garamond">
+            <img src="images/design-project-images/hi-vis-id/Type_Studies_Examples.png" class="fullwidth-image" id="type-study-examples" alt="Type Study Examples">
+            <img src="images/design-project-images/hi-vis-id/Type_Studies_Examples_cropped.png" class="fullwidth-image" id="type-study-examples-cropped" alt="Type Study Examples Cropped">
+        </div>
+    </div>
+
+    <div class="hivisid-color-background-image">
+        <div class="hivisid-color">
+            <h2 class="proj-subtitle" id="hivisid-color-subtitle"><span class="roman-numeral">II.</span> Color</h2>
+            <div id="hivisid-color-p">
+                <p class="proj-body-copy">Bright gold and teal come together with subtle taupe and navy to create a visual discourse that is both scholarly and engaging.</p>
+            </div>
+
+            <div class="hivisid-colorstudies">
+                <div class="squares">
+                    <div class="gold-square-group">
+                        <div class="gold-square hivisid-square"></div>
+                        <p class="color-square-specs">
+                            CMYK: 0, 43, 95, 0<br>
+                            RGB: 249, 160, 39<br>
+                            #f9a027
+                        </p>
+                    </div>
+                    <div class="teal-square-group">
+                        <div class="teal-square hivisid-square"></div>
+                        <p class="color-square-specs">
+                            CMYK: 53, 12, 35, 0<br>
+                            RGB: 123, 182, 172<br>
+                            #7bb6ac
+                        </p>
+                    </div>
+                    <div class="taupe-square-group">
+                        <div class="taupe-square hivisid-square"></div>
+                        <p class="color-square-specs">
+                            CMYK: 44, 44, 58, 10<br>
+                            RGB: 141, 126, 106<br>
+                            #8d7e6a
+                        </p>
+                    </div>
+                    <div class="navy-square-group">
+                        <div class="navy-square hivisid-square"></div>
+                        <p class="color-square-specs">
+                            CMYK: 100, 86, 41, 42<br>
+                            RGB: 0, 39, 76<br>
+                            #00274c
+                        </p>
+                    </div>
+                </div>
             </div>
         </div>
-
-        <div class="grey-background">
-            <div class="hivisid-type">
-                <h2 class="proj-subtitle" id="hivisid-type-subtitle"><span class="roman-numeral">I.</span> Type</h2>
-                <div id="hivisid-type-p">
-                    <p class="proj-body-copy">Timeless Garamond juxtaposes with contemporary, direct Oswald.</p>
-                </div>
-                <img src="images/design-project-images/hi-vis-id/Letter-Studies-Oswald.png" class="fullwidth-image" id="letter-study-oswald" alt="Letter Study Oswald">
-                <img src="images/design-project-images/hi-vis-id/Letter-Studies-Garamond.png" class="fullwidth-image" id="letter-study-garamond" alt="Letter Study Garamond">
-                <img src="images/design-project-images/hi-vis-id/Type_Studies_Examples.png" class="fullwidth-image" id="type-study-examples" alt="Type Study Examples">
-                <img src="images/design-project-images/hi-vis-id/Type_Studies_Examples_cropped.png" class="fullwidth-image" id="type-study-examples-cropped" alt="Type Study Examples Cropped">
-            </div>
-        </div>
-
-        <div class="grey-background">
-            <div class="hivisid-color">
-                <h2 class="proj-subtitle" id="hivisid-color-subtitle"><span class="roman-numeral">II.</span> Color</h2>
-                <div id="hivisid-color-p">
-                    <p class="proj-body-copy">Bright gold and teal come together with subtle taupe and navy to create a visual discourse that is both scholarly and engaging.</p>
-                </div>
-            </div>
-        </div>
-        <img src="images/design-project-images/hi-vis-id/Annual_Report_7_wall.png" class="fullwidth-image" alt="Annual Report Spread">
-
-        <div class="hivisid-colorstudies">
-            <div class="squares">
-                <div class="gold-square-group">
-                    <div class="gold-square hivisid-square"></div>
-                    <p class="color-square-specs">
-                        CMYK: 0, 43, 95, 0<br>
-                        RGB: 249, 160, 39<br>
-                        #f9a027
-                    </p>
-                </div>
-                <div class="teal-square-group">
-                    <div class="teal-square hivisid-square"></div>
-                    <p class="color-square-specs">
-                        CMYK: 53, 12, 35, 0<br>
-                        RGB: 123, 182, 172<br>
-                        #7bb6ac
-                    </p>
-                </div>
-                <div class="taupe-square-group">
-                    <div class="taupe-square hivisid-square"></div>
-                    <p class="color-square-specs">
-                        CMYK: 44, 44, 58, 10<br>
-                        RGB: 141, 126, 106<br>
-                        #8d7e6a
-                    </p>
-                </div>
-                <div class="navy-square-group">
-                    <div class="navy-square hivisid-square"></div>
-                    <p class="color-square-specs">
-                        CMYK: 100, 86, 41, 42<br>
-                        RGB: 0, 39, 76<br>
-                        #00274c
-                    </p>
-                </div>
-            </div>
-        </div>
+    </div>
 
         <div class="hivisid-smartdynamic">
             <h2 class="proj-subtitle" id="hivisid-smartdynamic-subtitle">Smart & Dynamic</h2>
