updated hivisid page

--- a/d-hivisid.html
+++ b/d-hivisid.html
@@ -133,7 +133,7 @@
         </div>
     </div>
 
-        <div class="hivisid-smartdynamic">
+        <div class="hivisid-smartdynamic top-margin bottom-margin">
             <h2 class="proj-subtitle" id="hivisid-smartdynamic-subtitle">Smart & Dynamic</h2>
             <div id="hivisid-smartdynamic-p">
                 <p class="proj-body-copy">The resulting system is flexible, and was applied to a number of materials, from the bi-annual trifold of event listings to the 2017-2018 annual report.</p>
@@ -156,32 +156,32 @@
             </div>
         </div>
 
-        <div class="hivisid-yeartheme">
+        <div class="hivisid-yeartheme top-margin bottom-margin">
             <h2 class="proj-subtitle" id="hivisid-yeartheme-subtitle">For 2018-2019, we decided to extend this visual identity system to the institute’s annual year theme.</h2>
             <div id="hivisid-yeartheme-p">
                 <p class="proj-body-copy">Every year the Institute for the Humanities creates a year-long theme that much of the artistic, cultural, and intellectual happenings on campus revolve around. The 2018-2019 year was designated the Year of Humanities and Environments. In addition to a logo based off of this system, I designed a series of street pole banners. I utilized a set of illustrations to convey different notions of the human-environment relationship—built, natural, industry, and renewable energy.</p>
             </div>
         </div>
 
-        <div class="grey-background hivisid-logos-background">
+        <div class="hivisid-logos-background">
             <div class="hivisid-logos">
                 <img src="/Users/ninabarraco/Dropbox/Website/PortfolioWebsite/images/design-project-images/hi-vis-id/Humanities_and_Environments_Logo_black.jpg" class="fullwidth-image" id="yeartheme-black" alt="Year Theme Logo Black">
                 <img src="/Users/ninabarraco/Dropbox/Website/PortfolioWebsite/images/design-project-images/hi-vis-id/Humanities_and_Environments_Logo_reverse.jpg" class="fullwidth-image" id="yeartheme-reverse" alt="Year Theme Logo Reverse">
             </div>
         </div>
 
-        <div class="hivisid-yeartheme-2">
+        <div class="hivisid-yeartheme-2 top-margin bottom-margin">
             <p class="proj-body-copy" id="hivisid-yeartheme-p2">Type and image interact seamlessly, two seemingly disparate elements that together create an environment of their own. In addition, these illustrations allude to various topics that the institute’s programming covered under this theme.</p>
         </div>
 
         <div class="hivisid-yeartheme-banners">
             <img src="/Users/ninabarraco/Dropbox/Website/PortfolioWebsite/images/design-project-images/hi-vis-id/2018_2019_Banners1_web.png" class="fullwidth-image" id="hivisid-banner-gold" alt="Year Theme Banner Gold">
             <img src="/Users/ninabarraco/Dropbox/Website/PortfolioWebsite/images/design-project-images/hi-vis-id/2018_2019_Banners2_web.png" class="fullwidth-image" id="hivisid-banner-teal" alt="Year Theme Banner Teal">
-            <img src="/Users/ninabarraco/Dropbox/Website/PortfolioWebsite/images/design-project-images/hi-vis-id/2018_2019_Banners3_web.png" class="fullwidth-image" id="hivisid-banner-taupe" alt="Year Theme Banner Teal">
-            <img src="/Users/ninabarraco/Dropbox/Website/PortfolioWebsite/images/design-project-images/hi-vis-id/2018_2019_Banners4_web.png" class="fullwidth-image" id="hivisid-banner-navy" alt="Year Theme Banner Teal">
+            <img src="/Users/ninabarraco/Dropbox/Website/PortfolioWebsite/images/design-project-images/hi-vis-id/2018_2019_Banners3_web.png" class="fullwidth-image" id="hivisid-banner-taupe" alt="Year Theme Banner Taupe">
+            <img src="/Users/ninabarraco/Dropbox/Website/PortfolioWebsite/images/design-project-images/hi-vis-id/2018_2019_Banners4_web.png" class="fullwidth-image" id="hivisid-banner-navy" alt="Year Theme Banner Navy">
         </div>
 
-        <div class="proj-bottom-nav-design">
+        <div class="proj-bottom-nav">
             <div class="bottom-nav-arrows">
                 <a href="d-greatblueorange.html">
                     <svg id="left-arrow" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 200"><title>Artboard 1 copy 3</title><path d="M80,24.64l6.34,6.68L17.77,97.81H200V107H17.77l68.6,66.49L80,180.13,0,102.38Z"/></svg>                </a>
